[package]
authors = ["ololoshka2871"]
edition = "2021"
readme = "README.md"
name = "fast-ampermeter2"
version = "0.0.1"
resolver = "2"

[dependencies]
heapless = "0.8"
circular-buffer = { version = "1.1", default-features = false }

embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"

usb-device = "0.3.2"
stm32-usbd = "0.7.0"
usbd-audio = { git = "https://github.com/Orange-Murker/usbd-audio.git", rev = "320ed3b" }

panic-abort = "0.3"

stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", rev = "d6d19c626d0bf7d1be5f76175d7f2facd94cc0c1" , optional = true }

rtic = { version = "2.1", features = ["rtic-monotonics"] }
rtic-sync = { version = "=1.3.1-alpha.1" }
rtic-monotonics = { version = "2.0", features = ["cortex-m-systick", "systick-64bit"] }

pkg-version = "1"

# defmt
defmt = "1"
defmt-macros = "1"
defmt-rtt = "1"

stm32-device-signature = "0.3.3"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = 2
lto = false
panic = "abort"
debug-assertions = true

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = 2 # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = true

[features]
default = [
    "stm32f103cb",
]

stm32f103cb = ["stm32f103"]
stm32f103 = [
    "stm32f1xx-hal/stm32f103",
    "stm32f1xx-hal/medium",
    "stm32f1xx-hal/defmt",
    "stm32-device-signature/stm32f1",
    "rtic/thumbv7-backend",
]

[patch.crates-io]
# USB isochronous support fixes
stm32-usbd = { git = "https://github.com/ololoshka2871/stm32-usbd.git", rev = "a195bd5f52" }